--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,10 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "outputPath": "docs",
+            "outputPath": {
+              "base": "docs",
+              "browser": ""
+            },
             "baseHref": "/citizenship-memory-game/",
             "browser": "src/main.ts",
             "polyfills": [
