Rename project from `citizenship-flashcards` to `canadian-citizenship-quiz` across all files and configurations.

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "citizenship-flashcards": {
+    "canadian-citizenship-quiz": {
       "projectType": "application",
       "schematics": {},
       "root": "",
