--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "citizenship-flashcards",
+  "name": "canadian-citizenship-quiz",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
