Remove unused `.vscode` configuration files and `main-YB456ICS.js` from the project.

--- a/angular.json
+++ b/angular.json
@@ -66,10 +66,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "citizenship-flashcards:build:production"
+              "buildTarget": "canadian-citizenship-quiz:build:production"
             },
             "development": {
-              "buildTarget": "citizenship-flashcards:build:development"
+              "buildTarget": "canadian-citizenship-quiz:build:development"
             }
           },
           "defaultConfiguration": "development"
